# shorty

./: CHANGELOG.md  shorty.cabal
app/: Main.hs
lib/: http.hs
