cabal-version:      2.4
name:               shorty
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Evan do Carmo
maintainer:         carmo.evan@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable shorty
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.0.0,
                      shorty
    hs-source-dirs:   app
    default-language: Haskell2010

library
  exposed-modules:     HTTP
  build-depends:       base ^>=4.14.0.0,
                       servant-server,
                       servant,
                       text,
                       time,
                       wai,
                       warp,
                       aeson,
  hs-source-dirs:      lib
  default-language:    Haskell2010
